[package]
name = "krnl-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
half = { version = "=2.3.1", default-features = false, optional = true }
libm = { version = "=0.2.8", default-features = false, optional = true }
krnl = "0.1.1"

[package.metadata.krnlc.dependencies]
# Pass pinned deps through to krnlc.
# If we don't do this, it will crash because the auto-resolved versions
# are too new.
half = {}
libm = {}
